--- a/.classpath
+++ b/.classpath
@@ -76,5 +76,6 @@
 	<classpathentry kind="lib" path="D:/Spring/Spring framework Jars/spring-framework-5.1.5.RELEASE-dist/spring-framework-5.1.5.RELEASE/libs/spring-websocket-5.1.5.RELEASE.jar"/>
 	<classpathentry kind="lib" path="D:/Spring/Spring framework Jars/spring-framework-5.1.5.RELEASE-dist/spring-framework-5.1.5.RELEASE/libs/spring-websocket-5.1.5.RELEASE-javadoc.jar"/>
 	<classpathentry kind="lib" path="D:/Spring/Spring framework Jars/spring-framework-5.1.5.RELEASE-dist/spring-framework-5.1.5.RELEASE/libs/spring-websocket-5.1.5.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/aspectjweaver-1.9.5.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
